<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/authorSlug"
        android:layout_below="@+id/title"
        android:text="@string/authorSlug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/authorName"
        android:layout_below="@+id/authorSlug"
        android:text="@string/authorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/authorPosition"
        android:layout_below="@+id/authorName"
        android:text="@string/authorPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/postUrl"
        android:layout_below="@id/authorPosition"
        android:text="@string/postUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/goslyudiUrl"
        android:layout_below="@id/postUrl"
        android:text="@string/goslyudiUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/avatarImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/avatarUrl"
        android:layout_below="@id/goslyudiUrl"
        android:text="@string/avatarUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/comments"
        android:layout_below="@+id/avatarUrl"
        android:text="@string/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/commenters"
        android:layout_below="@+id/comments"
        android:text="@string/commenters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/visits24"
        android:layout_below="@+id/commenters"
        android:text="@string/visits24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/links"
        android:layout_below="@+id/visits24"
        android:text="@string/links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/postPosition"
        android:layout_below="@+id/links"
        android:text="@string/postPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/publication"
        android:layout_below="@+id/postPosition"
        android:text="@string/publication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>